Fix gameboard spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --X: #bedb39;
+    --O: #fd7402;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -13,33 +18,19 @@ body {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    background-color: #014d64;
+    background-color: white;
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    gap: 20px;
 }
 
 .square {
-    /* border: 2px solid white; */
     display: flex;
     justify-content: center;
     align-items: center;
 
-}
-
-#one1, #four4, #seven7  {
-    border-left: 5px solid white;
-    border-right: 5px solid white;
-}
-
-#three3, #five5 {
-    border-top: 5px solid white;
-    border-bottom: 5px solid white;
-}
-
-#four4 {
-    border-top: 5px solid white;
-    border-bottom: 5px solid white;
+    background-color: #014d64;;
 }
 
